# worker-auth

./: Cargo.toml  package-lock.json  package.json  schema.sql  wrangler.toml
src/: lib.rs
src/handlers/api/: user.rs
src/models/: claims.rs  mod.rs  resp.rs  status_code.rs  user.rs
src/svc/: mod.rs  password.rs
src/svc/api/user/: login.rs  mod.rs  register.rs
src/utils/: b64.rs  mod.rs  return_response.rs  validate.rs
