[package]
name = "worker-auth"
version = "0.1.0"
edition = "2021"
authors = [ "qyzhg <qyzhg@qyzhg.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.1", features = ["d1"] }
worker-macros = { version="0.4.1" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
anyhow = "1.0.89"
#argon2 = "0.5"
#rand = "0.8"
#rand_core = "0.6.4"
